<resources>
    <string name="app_name">InmobiliariaZarateMobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Inmobiliaria La Punta</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_inmuebles">Inmuebles</string>
    <string name="menu_inquilinos">Inquilinos</string>
    <string name="menu_contratos">Contratos</string>
    <string name="menu_logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="title_activity_login">Login</string>
    <string name="add">ss</string>
</resources>