<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.inmobiliariazaratemobile.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.inmobiliariazaratemobile.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.example.inmobiliariazaratemobile.ui.inmuebles.InmueblesFragment"
        android:label="@string/menu_inmuebles"
        tools:layout="@layout/fragment_inmuebles" >
        <action
            android:id="@+id/action_nav_inmuebles_to_detalleDeInmuebleFragment"
            app:destination="@id/detalleDeInmuebleFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.example.inmobiliariazaratemobile.ui.inquilinos.InquilinosFragment"
        android:label="@string/menu_inquilinos"
        tools:layout="@layout/fragment_inquilinos" />

    <fragment
        android:id="@+id/nav_contratos"
        android:name="com.example.inmobiliariazaratemobile.ui.contratos.ContratosFragment"
        android:label="@string/menu_contratos"
        tools:layout="@layout/fragment_contratos" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.inmobiliariazaratemobile.ui.logout.LogoutFragment"
        android:label="@string/menu_contratos"
        tools:layout="@layout/fragment_contratos" />
    <fragment
        android:id="@+id/detalleDeInmuebleFragment"
        android:name="com.example.inmobiliariazaratemobile.ui.inmuebles.DetalleDeInmuebleFragment"
        android:label="fragment_detalle_de_inmueble"
        tools:layout="@layout/fragment_detalle_de_inmueble" >
        <action
            android:id="@+id/action_detalleDeInmuebleFragment_to_nav_inmuebles2"
            app:destination="@id/nav_inmuebles" />
    </fragment>
</navigation>